--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@material-ui/core": "^3.9.3",
+        "@material-ui/icons": "^3.0.2",
         "axios": "^0.17",
         "babel-preset-react": "^6.23.0",
         "bootstrap-sass": "^3.3.7",
@@ -18,9 +20,11 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "react": "^15.4.2",
-        "react-dom": "^15.4.2"
+        "react-dom": "^15.4.2",
+        "react-redux": "^7.0.3",
+        "react-router-dom": "^5.0.0",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0"
     },
-    "dependencies": {
-        "react-router": "^5.0.0"
-    }
+    "dependencies": {}
 }
