--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "barryvdh/laravel-ide-helper": "^2.6",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "tymon/jwt-auth": "1.0.0-rc3"
     },
     "require-dev": {
         "doctrine/dbal": "^2.9",
