--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "js-cookie": "^2.2.0"
+    }
 }
