--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "abraham/twitteroauth": "^1.0",
         "barryvdh/laravel-ide-helper": "^2.6",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "tymon/jwt-auth": "1.0.0-rc3"
     },
     "require-dev": {
-        "doctrine/dbal": "^2.9",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
